--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <body class="signup-body-black">
-
   <div class="signup-card-black animate-card">
     <h2 class="title-black">Login</h2>
     <p class="subtitle-black">Welcome back, please login</p>
@@ -28,12 +27,9 @@
     <button id="loginBtn" class="btn-animated-black">Login</button>
 
     <p class="login-text-black">
-      Don’t have an account? <a href="signup.html">Sign up</a>
+      Don’t have an account?....... <a href="signup.html">Sign up</a>
     </p>
   </div>
-
-
-
 
   <script type="module" src="config.js"></script>
   <script type="module" src="authen.js"></script>
